update refactored branch

--- a/runtime/JavaScript/src/antlr4/package.json
+++ b/runtime/JavaScript/src/antlr4/package.json
@@ -1,19 +1,82 @@
 {
-  "name": "antlr4",
-  "version": "4.7.2",
-  "description": "JavaScript runtime for ANTLR4",
-  "main": "src/antlr4/index.js",
-  "repository": "antlr/antlr4.git",
-  "keywords": [
-    "lexer",
-    "parser",
-    "antlr",
-    "antlr4",
-    "grammar"
-  ],
-  "license": "BSD-3-Clause",
-  "bugs": {
-    "url": "https://github.com/antlr/antlr4/issues"
-  },
-  "homepage": "https://github.com/antlr/antlr4"
+    "name": "antlr4",
+    "version": "4.7.2",
+    "description": "JavaScript runtime for ANTLR4",
+    "main": "src/antlr4/index.js",
+    "repository": "antlr/antlr4.git",
+    "keywords": [
+        "lexer",
+        "parser",
+        "antlr",
+        "antlr4",
+        "grammar"
+    ],
+    "license": "BSD-3-Clause",
+    "bugs": {
+        "url": "https://github.com/antlr/antlr4/issues"
+    },
+    "homepage": "https://github.com/antlr/antlr4",
+    "devDependencies": {
+        "babel-cli": "latest",
+        "babel-core": "latest",
+        "babel-plugin-add-module-exports": "latest",
+        "babel-plugin-transform-es2015-modules-commonjs": "latest",
+        "babel-polyfill": "latest",
+        "babel-preset-env": "latest",
+        "babel-preset-es2015-without-strict": "latest"
+    },
+    "scripts": {
+        "compile-atnATNjs": "babel atn\\ATN.js -o atn\\ATN.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-atnATNConfigjs": "babel atn\\ATNConfig.js -o atn\\ATNConfig.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-atnATNConfigSetjs": "babel atn\\ATNConfigSet.js -o atn\\ATNConfigSet.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-atnATNDeserializationOptionsjs": "babel atn\\ATNDeserializationOptions.js -o atn\\ATNDeserializationOptions.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-atnATNDeserializerjs": "babel atn\\ATNDeserializer.js -o atn\\ATNDeserializer.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-atnATNSimulatorjs": "babel atn\\ATNSimulator.js -o atn\\ATNSimulator.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-atnATNStatejs": "babel atn\\ATNState.js -o atn\\ATNState.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-atnATNTypejs": "babel atn\\ATNType.js -o atn\\ATNType.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-atnindexjs": "babel atn\\index.js -o atn\\index.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-atnLexerActionjs": "babel atn\\LexerAction.js -o atn\\LexerAction.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-atnLexerActionExecutorjs": "babel atn\\LexerActionExecutor.js -o atn\\LexerActionExecutor.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-atnLexerATNSimulatorjs": "babel atn\\LexerATNSimulator.js -o atn\\LexerATNSimulator.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-atnParserATNSimulatorjs": "babel atn\\ParserATNSimulator.js -o atn\\ParserATNSimulator.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-atnPredictionModejs": "babel atn\\PredictionMode.js -o atn\\PredictionMode.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-atnSemanticContextjs": "babel atn\\SemanticContext.js -o atn\\SemanticContext.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-atnTransitionjs": "babel atn\\Transition.js -o atn\\Transition.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-BufferedTokenStreamjs": "babel BufferedTokenStream.js -o BufferedTokenStream.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-CharStreamsjs": "babel CharStreams.js -o CharStreams.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-CommonTokenFactoryjs": "babel CommonTokenFactory.js -o CommonTokenFactory.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-CommonTokenStreamjs": "babel CommonTokenStream.js -o CommonTokenStream.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-dfaDFAjs": "babel dfa\\DFA.js -o dfa\\DFA.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-dfaDFASerializerjs": "babel dfa\\DFASerializer.js -o dfa\\DFASerializer.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-dfaDFAStatejs": "babel dfa\\DFAState.js -o dfa\\DFAState.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-dfaindexjs": "babel dfa\\index.js -o dfa\\index.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-errorDiagnosticErrorListenerjs": "babel error\\DiagnosticErrorListener.js -o error\\DiagnosticErrorListener.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-errorErrorListenerjs": "babel error\\ErrorListener.js -o error\\ErrorListener.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-errorErrorsjs": "babel error\\Errors.js -o error\\Errors.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-errorErrorStrategyjs": "babel error\\ErrorStrategy.js -o error\\ErrorStrategy.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-errorindexjs": "babel error\\index.js -o error\\index.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-FileStreamjs": "babel FileStream.js -o FileStream.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-indexjs": "babel index.js -o index.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-InputStreamjs": "babel InputStream.js -o InputStream.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-IntervalSetjs": "babel IntervalSet.js -o IntervalSet.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-Lexerjs": "babel Lexer.js -o Lexer.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-LL1Analyzerjs": "babel LL1Analyzer.js -o LL1Analyzer.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-Parserjs": "babel Parser.js -o Parser.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-ParserRuleContextjs": "babel ParserRuleContext.js -o ParserRuleContext.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-polyfillscodepointatjs": "babel polyfills\\codepointat.js -o polyfills\\codepointat.js --require babel-polyfill --presets env",
+        "compile-polyfillsfromcodepointjs": "babel polyfills\\fromcodepoint.js -o polyfills\\fromcodepoint.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-PredictionContextjs": "babel PredictionContext.js -o PredictionContext.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-Recognizerjs": "babel Recognizer.js -o Recognizer.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-RuleContextjs": "babel RuleContext.js -o RuleContext.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-Tokenjs": "babel Token.js -o Token.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-treeindexjs": "babel tree\\index.js -o tree\\index.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-treeTreejs": "babel tree\\Tree.js -o tree\\Tree.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-treeTreesjs": "babel tree\\Trees.js -o tree\\Trees.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-Utilsjs": "babel Utils.js -o Utils.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-1_script": "npm run compile-atnATNjs && npm run compile-atnATNConfigjs && npm run compile-atnATNConfigSetjs && npm run compile-atnATNDeserializationOptionsjs && npm run compile-atnATNDeserializerjs && npm run compile-atnATNSimulatorjs && npm run compile-atnATNStatejs && npm run compile-atnATNTypejs && npm run compile-atnindexjs && npm run compile-atnLexerActionjs && npm run compile-atnLexerActionExecutorjs && npm run compile-atnLexerATNSimulatorjs && npm run compile-atnParserATNSimulatorjs && npm run compile-atnPredictionModejs && npm run compile-atnSemanticContextjs && npm run compile-atnTransitionjs && npm run compile-BufferedTokenStreamjs && npm run compile-CharStreamsjs && npm run compile-CommonTokenFactoryjs && npm run compile-CommonTokenStreamjs",
+        "compile-2_script": "npm run compile-dfaDFAjs && npm run compile-dfaDFASerializerjs && npm run compile-dfaDFAStatejs && npm run compile-dfaindexjs && npm run compile-errorDiagnosticErrorListenerjs && npm run compile-errorErrorListenerjs && npm run compile-errorErrorsjs && npm run compile-errorErrorStrategyjs && npm run compile-errorindexjs && npm run compile-FileStreamjs && npm run compile-indexjs && npm run compile-InputStreamjs && npm run compile-IntervalSetjs && npm run compile-Lexerjs && npm run compile-LL1Analyzerjs && npm run compile-Parserjs && npm run compile-ParserRuleContextjs && npm run compile-polyfillscodepointatjs && npm run compile-polyfillsfromcodepointjs && npm run compile-PredictionContextjs",
+        "compile-3_script": "npm run compile-atnATNTypejs && npm run compile-atnindexjs && npm run compile-atnLexerActionjs && npm run compile-atnLexerActionExecutorjs && npm run compile-atnLexerATNSimulatorjs && npm run compile-atnParserATNSimulatorjs && npm run compile-atnPredictionModejs && npm run compile-atnSemanticContextjs && npm run compile-atnTransitionjs && npm run compile-BufferedTokenStreamjs && npm run compile-CharStreamsjs && npm run compile-CommonTokenFactoryjs && npm run compile-CommonTokenStreamjs && npm run compile-dfaDFAjs && npm run compile-dfaDFASerializerjs && npm run compile-dfaDFAStatejs && npm run compile-dfaindexjs && npm run compile-errorDiagnosticErrorListenerjs && npm run compile-errorErrorListenerjs && npm run compile-errorErrorsjs",
+        "compile-4_script": "npm run compile-errorErrorStrategyjs && npm run compile-errorindexjs && npm run compile-FileStreamjs && npm run compile-indexjs && npm run compile-InputStreamjs && npm run compile-IntervalSetjs && npm run compile-Lexerjs && npm run compile-LL1Analyzerjs && npm run compile-Parserjs && npm run compile-ParserRuleContextjs && npm run compile-polyfillscodepointatjs && npm run compile-polyfillsfromcodepointjs && npm run compile-PredictionContextjs && npm run compile-Recognizerjs && npm run compile-RuleContextjs && npm run compile-Tokenjs && npm run compile-treeindexjs && npm run compile-treeTreejs && npm run compile-treeTreesjs && npm run compile-Utilsjs",
+        "compile": "npm run compile-1_script && npm run compile-2_script && npm run compile-3_script && npm run compile-4_script"
+    }
 }
